--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="./index.html" style="color: #999;" >Index</a></li>
+            <li><a href="./index.html" style="color: #999;" >Home</a></li>
             <li><a href="./contact.html" style="color:white;">Contact</a></li>
         </ul>
     </nav>
