--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="./index.html" style="color:White;">Index</a></li>
+            <li><a href="./index.html" style="color:White;">Home</a></li>
             <li><a href="./contact.html" style="color: #999;" >Contact</a></li>
         </ul>
     </nav>
